# trade-bot

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  backtest_trades.csv  check_symbols.py  config.json  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  run.py
.github/workflows/: ci.yml
api/: main.py
bot/: backtest.py  bet_sizing.py  data_collector.py  features.py  paper_trading.py  polymarket_client.py  predict.py  retrain_model.py  strategy.py  train_model.py  utils.py
bot/models/: model.pkl
database/: bot.db  schema.sql
docs/: ARCHITECTURE.md  ROADMAP.md  STRATEGY.md
logs/: backtest_results.json
tests/: conftest.py  test_api.py  test_model.py  test_strategy.py  test_utils.py
web/: dashboard.js  index.html  styles.css
