[project]
name = "ai-trading-bot"
version = "1.0.0"
description = "Autonomous cryptocurrency trading system powered by Machine Learning"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
keywords = ["trading", "machine-learning", "cryptocurrency", "quantitative-finance", "fastapi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "fastapi",
    "uvicorn",
    "pandas",
    "numpy",
    "scikit-learn",
    "ta",
    "ccxt",
    "joblib",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "httpx",
    "flake8",
]

[project.urls]
Repository = "https://github.com/tu-usuario/trade-bot"
Documentation = "https://github.com/tu-usuario/trade-bot/tree/main/docs"
Issues = "https://github.com/tu-usuario/trade-bot/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.flake8]
max-line-length = 120
max-complexity = 15
exclude = ["venv", ".git", "__pycache__", "bot/models"]
