[project]
name = "polymarket-btc-prediction-bot"
version = "2.0.0"
description = "ML-powered bot that predicts Bitcoin price direction on Polymarket 5-minute markets"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "xgboost>=2.0",
    "scikit-learn>=1.3",
    "joblib>=1.3",
    "numpy>=1.24",
    "pandas>=2.0",
    "ccxt>=4.0",
    "websockets>=12.0",
    "aiohttp>=3.9",
    "ta>=0.11",
    "py-clob-client>=0.5",
    "fastapi>=0.100",
    "uvicorn>=0.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "httpx>=0.25",
    "flake8>=6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"
